--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
- *       http://www.apache.org/licenses/LICENSE-2.0
+ * http://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -18,14 +18,15 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'de.undercouch.download'
+    id 'kotlin-kapt'
 }
 
 android {
-    namespace 'poselandmarker'
+    namespace 'com.google.mediapipe.examples.poselandmarker'
     compileSdk 33
 
     defaultConfig {
-        applicationId "poselandmarker"
+        applicationId "com.google.mediapipe.examples.poselandmarker"
         minSdk 24
         targetSdk 33
         versionCode 1
@@ -41,15 +42,23 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = '17'
     }
 
     buildFeatures {
         viewBinding true
+    }
+
+    // ADD THIS ENTIRE BLOCK TO FIX THE XML PARSER CONFLICT
+    configurations {
+        all {
+            exclude group: 'xalan', module: 'xalan'
+            exclude group: 'xerces', module: 'xercesImpl'
+        }
     }
 }
 
@@ -76,18 +85,21 @@ dependencies {
     // CameraX core library
     def camerax_version = '1.2.0-alpha02'
     implementation "androidx.camera:camera-core:$camerax_version"
-
-    // CameraX Camera2 extensions
     implementation "androidx.camera:camera-camera2:$camerax_version"
-
-    // CameraX Lifecycle library
     implementation "androidx.camera:camera-lifecycle:$camerax_version"
-
-    // CameraX View class
     implementation "androidx.camera:camera-view:$camerax_version"
 
     // WindowManager
     implementation 'androidx.window:window:1.1.0-alpha03'
+
+    // Room Database
+    def room_version = "2.5.2"
+    implementation "androidx.room:room-runtime:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+
+    // MediaPipe Library
+    implementation 'com.google.mediapipe:tasks-vision:0.10.26'
 
     // Unit testing
     testImplementation 'junit:junit:4.13.2'
@@ -95,11 +107,4 @@ dependencies {
     // Instrumented testing
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-
-    // MediaPipe Library
-    implementation 'com.google.mediapipe:tasks-vision:0.10.26'
-
-// Add these two lines for Android Navigation Component
-implementation "androidx.navigation:navigation-fragment-ktx:2.5.3"
-implementation "androidx.navigation:navigation-ui-ktx:2.5.3"
 }
