--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-feature android:name="android.hardware.type.watch" />
     <uses-permission android:name="com.samsung.android.health.permission.read"/>
     <uses-permission android:name="com.samsung.android.health.permission.HEART_RATE"/>
+    <uses-permission android:name="android.permission.BODY_SENSORS"/>
     
 
     <application
