--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,7 +57,8 @@ dependencies {
     def nav_version = "2.6.0"
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
-
+    // Wear OS Data Layer API
+    implementation 'com.google.android.gms:play-services-wearable:18.1.0'
     // CameraX
     def camerax_version = '1.3.0-beta01' // Using a stable beta version
     implementation "androidx.camera:camera-core:$camerax_version"
