--- a/build.gradle
+++ b/build.gradle
@@ -5,3 +5,12 @@ plugins {
     id 'org.jetbrains.kotlin.android' version '1.8.0' apply false
     id 'de.undercouch.download' version '4.1.2' apply false
 }
+
+// Add this below
+allprojects {
+    repositories {
+        google()
+        mavenCentral()
+    }
+}
+
