Working:App->changed splashscreen

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,7 +52,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.fragment:fragment-ktx:1.6.0'
     implementation "androidx.activity:activity-ktx:1.7.2" // For viewModels
-
+    implementation("androidx.core:core-splashscreen:1.0.1")
     // Navigation
     def nav_version = "2.6.0"
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
